# KolkoKrzyzyk

./: .gitignore  CMakeLists.txt  ai.h  flake.nix  main.cpp  old_code_for_emergency
